Reduce color decimals

--- a/packages/plugin-css/test/fixtures/base-selector/want.css
+++ b/packages/plugin-css/test/fixtures/base-selector/want.css
@@ -3,18 +3,18 @@
  * ------------------------------------------- */
 
 :host {
-  --foo: oklch(0.6333612529106073 0.20110650544801523 253.921996151641);
+  --foo: oklch(0.6334 0.2011 253.922);
 }
 
 @media (color-gamut: p3) {
   :host {
-    --foo: oklch(0.6312831744667307 0.21843061935804214 253.28399755832424);
+    --foo: oklch(0.6313 0.2184 253.284);
   }
 }
 
 @media (color-gamut: rec2020) {
   :host {
-    --foo: oklch(0.6336836232352946 0.2186805283935796 254.20132843068833);
+    --foo: oklch(0.6337 0.2187 254.2013);
   }
 }
 
