--- a/www/src/styles/app.css
+++ b/www/src/styles/app.css
@@ -7,7 +7,8 @@ body {
   --grid-size: 2.5rem;
 
   background-color: var(--tz-color-bg-1);
-  background-image: linear-gradient(
+  background-image:
+    linear-gradient(
       to bottom,
       var(--grid-color),
       var(--grid-color) calc(1 / 16 * 1rem),
