--- a/packages/plugin-css/test/fixtures/ds-microsoft-fluent/want.css
+++ b/packages/plugin-css/test/fixtures/ds-microsoft-fluent/want.css
@@ -953,77 +953,77 @@
   --stroke-width-thicker: 3px;
   --stroke-width-thickest: 4px;
   --stroke-width-thin: 1px;
-  --typography-body1-font-family: var(--typography-family-base);
-  --typography-body1-font-size: 0.875rem;
-  --typography-body1-font-weight: var(--typography-weight-regular);
-  --typography-body1-line-height: 1.4285714286;
-  --typography-body1-strong-font-family: var(--typography-family-base);
-  --typography-body1-strong-font-size: 0.875rem;
-  --typography-body1-strong-font-weight: var(--typography-weight-semibold);
-  --typography-body1-strong-line-height: 1.4285714286;
+  --typography-body1-font-family: var(--typography-family-base); /* Body */
+  --typography-body1-font-size: 0.875rem; /* Body */
+  --typography-body1-font-weight: var(--typography-weight-regular); /* Body */
+  --typography-body1-line-height: 1.4285714286; /* Body */
+  --typography-body1-strong-font-family: var(--typography-family-base); /* Body (unread), button */
+  --typography-body1-strong-font-size: 0.875rem; /* Body (unread), button */
+  --typography-body1-strong-font-weight: var(--typography-weight-semibold); /* Body (unread), button */
+  --typography-body1-strong-line-height: 1.4285714286; /* Body (unread), button */
   --typography-body1-stronger-font-family: var(--typography-family-base);
   --typography-body1-stronger-font-size: 0.875rem;
   --typography-body1-stronger-font-weight: var(--typography-weight-bold);
   --typography-body1-stronger-line-height: 1.4285714286;
-  --typography-body2-font-family: var(--typography-family-base);
-  --typography-body2-font-size: 1rem;
-  --typography-body2-font-weight: var(--typography-weight-regular);
-  --typography-body2-line-height: 1.375;
-  --typography-body2-strong-font-family: var(--typography-family-base);
-  --typography-body2-strong-font-size: 1rem;
-  --typography-body2-strong-font-weight: var(--typography-weight-semibold);
-  --typography-body2-strong-line-height: 1.375;
+  --typography-body2-font-family: var(--typography-family-base); /* Large size input, text area, and dropdown */
+  --typography-body2-font-size: 1rem; /* Large size input, text area, and dropdown */
+  --typography-body2-font-weight: var(--typography-weight-regular); /* Large size input, text area, and dropdown */
+  --typography-body2-line-height: 1.375; /* Large size input, text area, and dropdown */
+  --typography-body2-strong-font-family: var(--typography-family-base); /* Subject title */
+  --typography-body2-strong-font-size: 1rem; /* Subject title */
+  --typography-body2-strong-font-weight: var(--typography-weight-semibold); /* Subject title */
+  --typography-body2-strong-line-height: 1.375; /* Subject title */
   --typography-body2-stronger-font-family: var(--typography-family-base);
   --typography-body2-stronger-font-size: 1rem;
   --typography-body2-stronger-font-weight: var(--typography-weight-bold);
   --typography-body2-stronger-line-height: 1.375;
-  --typography-caption1-font-family: var(--typography-family-base);
-  --typography-caption1-font-size: 0.75rem;
-  --typography-caption1-font-weight: var(--typography-weight-regular);
-  --typography-caption1-line-height: 1.3333333333;
-  --typography-caption1-strong-font-family: var(--typography-family-base);
-  --typography-caption1-strong-font-size: 0.75rem;
-  --typography-caption1-strong-font-weight: var(--typography-weight-semibold);
-  --typography-caption1-strong-line-height: 1.3333333333;
+  --typography-caption1-font-family: var(--typography-family-base); /* Caption */
+  --typography-caption1-font-size: 0.75rem; /* Caption */
+  --typography-caption1-font-weight: var(--typography-weight-regular); /* Caption */
+  --typography-caption1-line-height: 1.3333333333; /* Caption */
+  --typography-caption1-strong-font-family: var(--typography-family-base); /* Caption (unread) */
+  --typography-caption1-strong-font-size: 0.75rem; /* Caption (unread) */
+  --typography-caption1-strong-font-weight: var(--typography-weight-semibold); /* Caption (unread) */
+  --typography-caption1-strong-line-height: 1.3333333333; /* Caption (unread) */
   --typography-caption1-stronger-font-family: var(--typography-family-base);
   --typography-caption1-stronger-font-size: 0.75rem;
   --typography-caption1-stronger-font-weight: var(--typography-weight-bold);
   --typography-caption1-stronger-line-height: 1.3333333333;
-  --typography-caption2-font-family: var(--typography-family-base);
-  --typography-caption2-font-size: 0.625rem;
-  --typography-caption2-font-weight: var(--typography-weight-regular);
-  --typography-caption2-line-height: 1.4;
-  --typography-caption2-strong-font-family: var(--typography-family-base);
-  --typography-caption2-strong-font-size: 0.625rem;
-  --typography-caption2-strong-font-weight: var(--typography-weight-semibold);
-  --typography-caption2-strong-line-height: 1.4;
-  --typography-display-font-family: var(--typography-family-base);
-  --typography-display-font-size: 4.25rem;
-  --typography-display-font-weight: var(--typography-weight-bold);
-  --typography-display-line-height: 1.3529411765;
+  --typography-caption2-font-family: var(--typography-family-base); /* Metadata (limited) */
+  --typography-caption2-font-size: 0.625rem; /* Metadata (limited) */
+  --typography-caption2-font-weight: var(--typography-weight-regular); /* Metadata (limited) */
+  --typography-caption2-line-height: 1.4; /* Metadata (limited) */
+  --typography-caption2-strong-font-family: var(--typography-family-base); /* Metadata (limited) */
+  --typography-caption2-strong-font-size: 0.625rem; /* Metadata (limited) */
+  --typography-caption2-strong-font-weight: var(--typography-weight-semibold); /* Metadata (limited) */
+  --typography-caption2-strong-line-height: 1.4; /* Metadata (limited) */
+  --typography-display-font-family: var(--typography-family-base); /* XL Numerics (Limited) */
+  --typography-display-font-size: 4.25rem; /* XL Numerics (Limited) */
+  --typography-display-font-weight: var(--typography-weight-bold); /* XL Numerics (Limited) */
+  --typography-display-line-height: 1.3529411765; /* XL Numerics (Limited) */
   --typography-family-base: "Segoe UI Web (West European)", -apple-system, "BlinkMacSystemFont", "Roboto", "Helvetica Neue", sans-serif;
   --typography-family-monospace: "Consolas", "Courier New", "Courier", monospace;
   --typography-family-numeric: "Bahnschrift", "Segoe UI", "Segoe UI Web (West European)", -apple-system, "BlinkMacSystemFont", "Roboto", "Helvetica Neue", sans-serif;
-  --typography-large-title-font-family: var(--typography-family-base);
-  --typography-large-title-font-size: 2.5rem;
-  --typography-large-title-font-weight: var(--typography-weight-semibold);
-  --typography-large-title-line-height: 1.3;
-  --typography-subtitle1-font-family: var(--typography-family-base);
-  --typography-subtitle1-font-size: 1.25rem;
-  --typography-subtitle1-font-weight: var(--typography-weight-regular);
-  --typography-subtitle1-line-height: 1.4;
-  --typography-title1-font-family: var(--typography-family-base);
-  --typography-title1-font-size: 2rem;
-  --typography-title1-font-weight: var(--typography-weight-semibold);
-  --typography-title1-line-height: 1.25;
-  --typography-title2-font-family: var(--typography-family-base);
-  --typography-title2-font-size: 1.75rem;
-  --typography-title2-font-weight: var(--typography-weight-semibold);
-  --typography-title2-line-height: 1.2857142857;
-  --typography-title3-font-family: var(--typography-family-base);
-  --typography-title3-font-size: 1.5rem;
-  --typography-title3-font-weight: var(--typography-weight-semibold);
-  --typography-title3-line-height: 2;
+  --typography-large-title-font-family: var(--typography-family-base); /* Hero title */
+  --typography-large-title-font-size: 2.5rem; /* Hero title */
+  --typography-large-title-font-weight: var(--typography-weight-semibold); /* Hero title */
+  --typography-large-title-line-height: 1.3; /* Hero title */
+  --typography-subtitle1-font-family: var(--typography-family-base); /* Page header / Pane header */
+  --typography-subtitle1-font-size: 1.25rem; /* Page header / Pane header */
+  --typography-subtitle1-font-weight: var(--typography-weight-regular); /* Page header / Pane header */
+  --typography-subtitle1-line-height: 1.4; /* Page header / Pane header */
+  --typography-title1-font-family: var(--typography-family-base); /* Greeting title */
+  --typography-title1-font-size: 2rem; /* Greeting title */
+  --typography-title1-font-weight: var(--typography-weight-semibold); /* Greeting title */
+  --typography-title1-line-height: 1.25; /* Greeting title */
+  --typography-title2-font-family: var(--typography-family-base); /* Page title */
+  --typography-title2-font-size: 1.75rem; /* Page title */
+  --typography-title2-font-weight: var(--typography-weight-semibold); /* Page title */
+  --typography-title2-line-height: 1.2857142857; /* Page title */
+  --typography-title3-font-family: var(--typography-family-base); /* Email header */
+  --typography-title3-font-size: 1.5rem; /* Email header */
+  --typography-title3-font-weight: var(--typography-weight-semibold); /* Email header */
+  --typography-title3-line-height: 2; /* Email header */
   --typography-weight-bold: 700;
   --typography-weight-regular: 400;
   --typography-weight-semibold: 600;
