--- a/packages/plugin-css/test/fixtures/chained-selector/want.css
+++ b/packages/plugin-css/test/fixtures/chained-selector/want.css
@@ -12,7 +12,8 @@
   }
 }
 
-[data-color-mode="light"][data-product="default"], [data-color-mode="light"] [data-product="default"] {
+[data-color-mode="light"][data-product="default"],
+[data-color-mode="light"] [data-product="default"] {
   --color-blue-6: color(srgb 0.0196078431372549 0.3137254901960784 0.6823529411764706);
 }
 
@@ -22,7 +23,8 @@
   }
 }
 
-[data-color-mode="light"][data-contrast="high"][data-product="default"], [data-color-mode="light"][data-contrast="high"] [data-product="default"] {
+[data-color-mode="light"][data-contrast="high"][data-product="default"],
+[data-color-mode="light"][data-contrast="high"] [data-product="default"] {
   --color-blue-6: color(srgb 0.00784313725490196 0.23137254901960785 0.5843137254901961);
 }
 
@@ -32,7 +34,8 @@
   }
 }
 
-[data-color-mode="dark"][data-product="default"], [data-color-mode="dark"] [data-product="default"] {
+[data-color-mode="dark"][data-product="default"],
+[data-color-mode="dark"] [data-product="default"] {
   --color-blue-6: color(srgb 0.06666666666666667 0.34509803921568627 0.7803921568627451);
 }
 
@@ -42,7 +45,7 @@
   }
 }
 
-[data-color-mode="dark"][data-contrast="high"][data-product="default"], [data-color-mode="dark"][data-contrast="high"] [data-product="default"] {
+[data-color-mode="dark"][data-contrast="high"][data-product="default"],
+[data-color-mode="dark"][data-contrast="high"] [data-product="default"] {
   --color-blue-6: color(srgb 0.19215686274509805 0.5450980392156862 0.9725490196078431);
 }
-
