Improve docs styles

--- a/www/src/components/docs-header-nav.astro
+++ b/www/src/components/docs-header-nav.astro
@@ -37,7 +37,7 @@ import ThemeSwitcher from './ThemeSwitcher.js';
   .header-nav {
     align-items: center;
     background-color: var(--tz-color-bg-1);
-    border-bottom: var(--tz-border-2);
+    border-bottom: 1px solid var(--grid-color);
     color: var(--tz-color-text-1);
     display: flex;
     max-height: var(--grid-size);
