--- a/www/src/components/main-nav.astro
+++ b/www/src/components/main-nav.astro
@@ -8,7 +8,7 @@ const pkgInfo = JSON.parse(fs.readFileSync(new URL('../../../packages/cli/packag
 const { version } = pkgInfo;
 ---
 
-<nav class="nav" aria-label="Main nav">
+<nav class="nav" aria-label="Main">
   <ul class="nav-list">
     <li class="nav-item">
       <a class="logo-link" href="/"><Terrazzo size="1.25rem" /></a>
@@ -47,7 +47,7 @@ const { version } = pkgInfo;
       --nav-height: var(--grid-size);
 
       background: var(--tz-color-bg-1);
-      border-bottom: var(--tz-border-1);
+      border-bottom: var(--tz-border-2);
       color: var(--tz-color-text-1);
       height: var(--height);
 
