--- a/www/src/layouts/docs.astro
+++ b/www/src/layouts/docs.astro
@@ -68,8 +68,7 @@ const { frontmatter } = Astro.props;
 
       .content {
         background: var(--tz-color-bg-1);
-        border-left: var(--tz-border-2);
-        border-right: var(--tz-border-2);
+        border-inline: 1px solid var(--grid-color);
         margin-inline: auto;
         max-width: calc(15 * var(--grid-size));
         min-height: calc(100vh - var(--grid-size));
