--- a/packages/plugin-css/test/fixtures/type-border/want.css
+++ b/packages/plugin-css/test/fixtures/type-border/want.css
@@ -9,7 +9,7 @@
   --ds-border-red: 1px solid var(--ds-color-red);
   --ds-border-ridge: 1px ridge var(--ds-border-color);
   --ds-border-solid: 1px solid var(--ds-border-color);
-  --ds-border-thick: 2.5px solid var(--ds-color-base-gray-20);
+  --ds-border-thick: 2.5px solid var(--ds-color-border);
   --ds-color-base-gray-10: oklch(0.1 0.002 270);
   --ds-color-base-gray-15: oklch(0.15 0.001577 290);
   --ds-color-base-gray-20: oklch(0.2 0.001422 310);
@@ -45,7 +45,7 @@
 @media (prefers-color-scheme: light) {
   :root {
     --ds-border-red: 1px solid var(--ds-color-red);
-    --ds-border-thick: 2.5px solid var(--ds-color-base-gray-20);
+    --ds-border-thick: 2.5px solid var(--ds-color-border);
     --ds-color-border: var(--ds-color-base-gray-20);
     --ds-color-red: oklch(0.6347 0.254 16.4402);
   }
@@ -53,7 +53,7 @@
 
 [data-color-theme="light"] {
   --ds-border-red: 1px solid var(--ds-color-red);
-  --ds-border-thick: 2.5px solid var(--ds-color-base-gray-20);
+  --ds-border-thick: 2.5px solid var(--ds-color-border);
   --ds-color-border: var(--ds-color-base-gray-20);
   --ds-color-red: oklch(0.6347 0.254 16.4402);
 }
@@ -93,7 +93,7 @@
 @media (prefers-color-scheme: dark) {
   :root {
     --ds-border-red: 1px solid var(--ds-color-red);
-    --ds-border-thick: 2.5px solid var(--ds-color-base-gray-20);
+    --ds-border-thick: 2.5px solid var(--ds-color-border);
     --ds-color-border: var(--ds-color-base-gray-80);
     --ds-color-red: oklch(0.353 0.1415 18.1514);
   }
@@ -101,7 +101,7 @@
 
 [data-color-theme="dark"] {
   --ds-border-red: 1px solid var(--ds-color-red);
-  --ds-border-thick: 2.5px solid var(--ds-color-base-gray-20);
+  --ds-border-thick: 2.5px solid var(--ds-color-border);
   --ds-color-border: var(--ds-color-base-gray-80);
   --ds-color-red: oklch(0.353 0.1415 18.1514);
 }
